# AmpliPi

./: .gitignore
amplipi/: app.py  ctrl.py  models.py  streams.py  utils.py
amplipi/display/: display.py
fw/: DEVELOPING.md
fw/preamp/: CMakeLists.txt
fw/preamp/src/: main.c  port_defs.h
fw/preamp/startup/: startup_stm32.s
scripts/: deploy
tests/: test_rest.py
